test/tests/operators/from_microsoft_graph/error_delta_poll_interval_zero.txt
error: `poll_interval` must be positive
  --> tests/operators/from_microsoft_graph/error_delta_poll_interval_zero.tql:16:17
   |
16 |   poll_interval=0s
   |                 ^^ 
   |
